--- a/api-gateway.cabal
+++ b/api-gateway.cabal
@@ -18,6 +18,8 @@ executable api-gateway
   -- other-extensions:
   build-depends:       base >=4.9 && <4.10
                      , aeson
+                     , data-default-class
+                     , fast-logger
                      , hats
                      , optparse-applicative
                      , servant-server
