--- a/api-gateway.cabal
+++ b/api-gateway.cabal
@@ -15,6 +15,7 @@ cabal-version:       >=1.10
 executable api-gateway
   main-is:             Main.hs
   other-modules:       Api
+                       Api.MmeV1
                        Types
   -- other-extensions:
   build-depends:       base >=4.9 && <4.10
