--- a/stack.yaml
+++ b/stack.yaml
@@ -3,6 +3,7 @@
 resolver: lts-7.0
 packages:
     - 'api-gateway'
+    - 'csim-sim'
 
 # Dependency from Hackage. NATS client for Haskell.
 extra-deps: [hats-0.1.0.0]
