Create MME pco.

--- a/api-gateway/api-gateway.cabal
+++ b/api-gateway/api-gateway.cabal
@@ -27,6 +27,7 @@ executable api-gateway
                      , optparse-applicative
                      , servant-server
                      , servant-swagger
+                     , string-conversions
                      , text
                      , wai
                      , wai-extra
