--- a/csim-sim/csim-sim.cabal
+++ b/csim-sim/csim-sim.cabal
@@ -47,3 +47,21 @@ executable msue-sim
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall
+
+executable enb-sim
+    main-is:             Enb.hs
+    other-modules:       Common
+                         Options
+    -- other-extensions:
+    build-depends:       base >=4.9 && <4.10
+                       , aeson
+                       , bytestring
+                       , hats
+                       , optparse-applicative
+                       , stm
+                       , string-conversions
+                       , text
+                       , unordered-containers
+    hs-source-dirs:      src
+    default-language:    Haskell2010
+    ghc-options:         -Wall
